--- a/.github/workflows/formatter.yml
+++ b/.github/workflows/formatter.yml
@@ -15,4 +15,5 @@ jobs:
         run: |
           dotnet tool install -g dotnet-format
       - name: Run dotnet-format
-        run: dotnet-format TimeSliceNet/TimeSliceNet.sln --check
+        working-directory: ./TimeSliceNet
+        run: dotnet-format TimeSliceNet.sln --check
