--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ TimeSliceNet/TimeSliceTests/obj/
 TimeSliceNet/TimeSliceTests/bin/Debug/net5.0/
 
 TimeSliceNet/TimeSlice/bin/Debug/net5.0/
+
+TimeSliceNet/TimeSliceNet.sln.DotSettings.user
