--- a/.github/workflows/unittests_and_coverage.yml
+++ b/.github/workflows/unittests_and_coverage.yml
@@ -34,5 +34,5 @@ jobs:
         run: dotnet add package coverlet.msbuild
       - name: Measure Test Coverage
         working-directory: ./TimeSliceNet
-        run: dotnet test /p:Threshold=95 /p:Include="[TimeSlice.*]*,[TimeSliceEntityFrameworkExtensions.*]*" /p:ThresholdType=line /p:CollectCoverage=true /p:SkipAutoProps=true /p:CoverletOutputFormat=lcov --configuration Release
+        run: dotnet test /p:Threshold=95 /p:Include=\"[TimeSlice.*]*,[TimeSliceEntityFrameworkExtensions.*]*\" /p:ThresholdType=line /p:CollectCoverage=true /p:SkipAutoProps=true /p:CoverletOutputFormat=lcov --configuration Release
         # ToDo: increase the threshold over time.
