--- a/TimeSliceNet/TimeSliceEntityFrameWorkExtensions/TimeSliceEntityFrameWorkExtensions.csproj
+++ b/TimeSliceNet/TimeSliceEntityFrameWorkExtensions/TimeSliceEntityFrameWorkExtensions.csproj
@@ -4,6 +4,15 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DocumentationFile>bin\Release\TimeSliceEntityFrameWorkExtensions.xml</DocumentationFile>
+      <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    </PropertyGroup>
+
     <ItemGroup>
       <ProjectReference Include="..\TimeSlice\TimeSlice.csproj" />
     </ItemGroup>
