--- a/TimeSliceNet/ExampleClasses/ExampleClasses.csproj
+++ b/TimeSliceNet/ExampleClasses/ExampleClasses.csproj
@@ -8,6 +8,7 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
+        <ProjectReference Include="..\TimeSliceEntityFrameWorkExtensions\TimeSliceEntityFrameWorkExtensions.csproj" />
         <ProjectReference Include="..\TimeSlice\TimeSlice.csproj" />
     </ItemGroup>
 </Project>
