making it better

--- a/TimeSliceNet/TimeSliceEntityFrameWorkExtensions/TimeSliceEntityFrameWorkExtensions.csproj
+++ b/TimeSliceNet/TimeSliceEntityFrameWorkExtensions/TimeSliceEntityFrameWorkExtensions.csproj
@@ -6,6 +6,7 @@
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <DocumentationFile>bin\Debug\TimeSliceEntityFrameWorkExtensions.xml</DocumentationFile>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
