EF Core Persistence Tests (#16)

--- a/.github/workflows/unittests_and_coverage.yml
+++ b/.github/workflows/unittests_and_coverage.yml
@@ -26,10 +26,9 @@ jobs:
       - name: Install dependencies
         working-directory: ./TimeSliceNet
         run: dotnet restore
-      - name: Install coverlet.msbuild in UnitTests
+      - name: Install coverlet.msbuild in TimeSliceTests
         working-directory: ./TimeSliceNet/TimeSliceTests
         run: dotnet add package coverlet.msbuild
       - name: Measure Test Coverage
         working-directory: ./TimeSliceNet
-        run: dotnet test /p:Threshold=95 /p:ThresholdType=line /p:CollectCoverage=true /p:SkipAutoProps=true /p:CoverletOutputFormat=lcov --configuration Release
-        # ToDo: increase the threshold over time.
+        run: dotnet test /p:Threshold=95 /p:Include=\"[*]TimeSlice.*,[*]TimeSliceEntityFrameworkExtensions.*\" /p:ThresholdType=line /p:CollectCoverage=true /p:SkipAutoProps=true /p:CoverletOutputFormat=lcov --configuration Release
