--- a/.github/workflows/nuget_package_push_prerelease.yml
+++ b/.github/workflows/nuget_package_push_prerelease.yml
@@ -26,11 +26,13 @@ jobs:
         with:
           tagRegex: "prerelease-v(\\d+\\.\\d+\\.\\d+)"
       - name: Build/Check for compile errors (dotnet build)
+        working-directory: "TimeSliceNet"
         run: dotnet build --configuration Release
       - name: Run Unit Tests (dotnet test)
+        working-directory: "TimeSliceNet"
         run: dotnet test --configuration Release
       - name: Create Package (dotnet pack)
-        working-directory: "TimeSlice"
+        working-directory: "TimeSliceNet/TimeSlice"
         run: dotnet pack TimeSlice.csproj -p:PackageVersion=${{ steps.tagTimeslice.outputs.tag }} --version-suffix "beta${{ steps.current-time.outputs.formattedTime }}"
       - name: Setup Nuget.exe
         uses: warrenbuckley/Setup-Nuget@v1
