--- a/.github/workflows/nuget_package_push_prerelease.yml
+++ b/.github/workflows/nuget_package_push_prerelease.yml
@@ -33,7 +33,7 @@ jobs:
         run: dotnet test --configuration Release
       - name: Create Package (dotnet pack)
         working-directory: "TimeSliceNet/TimeSlice"
-        run: dotnet pack TimeSlice.csproj --configuration Release -p:PackageVersion=${{ steps.tagTimeslice.outputs.tag }} --version-suffix "beta${{ steps.current-time.outputs.formattedTime }}"
+        run: dotnet pack TimeSlice.csproj --configuration Release -p:PackageVersion="${{ steps.tagTimeslice.outputs.tag }}-beta${{ steps.current-time.outputs.formattedTime }}"
       - name: Setup Nuget.exe
         uses: warrenbuckley/Setup-Nuget@v1
       - name: Nuget push
