--- a/TimeSliceNet/TimeSlice/TimeSlice.csproj
+++ b/TimeSliceNet/TimeSlice/TimeSlice.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net5.0</TargetFramework>
         <Authors>Hochfrequenz Unternehmensberatung GmbH</Authors>
         <PackageProjectUrl>https://github.com/Hochfrequenz/time_slice_net/</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/Hochfrequenz/time_slice_net/blob/main/LICENSE</PackageLicenseUrl>
+        <PackageLicense>https://github.com/Hochfrequenz/time_slice_net/blob/main/LICENSE</PackageLicense>
         <RepositoryUrl>https://github.com/Hochfrequenz/time_slice_net/</RepositoryUrl>
     </PropertyGroup>
 
