Request C# Review Team for Dependabot Reviews

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,3 +9,5 @@ updates:
     directory: "/TimeSliceNet" # Location of package manifests
     schedule:
       interval: "daily"
+    reviewers:
+      - "@Hochfrequenz/c-developers-review-team"
